configured base.html and home.html

--- a/pages/templates/pages/home.html
+++ b/pages/templates/pages/home.html
@@ -1,5 +1,8 @@
-<h1>Home</h1>
-<a href="{% url 'booking' %}">Booking</a>
-<a href="{% url 'blog_list' %}">Blog</a>
-<a href="{% url 'contact' %}">Contact Us</a>
-<a href="{% url 'services' %}">Services</a>
+{% extends "base.html" %}
+
+{% block title %}Home{% endblock %}
+
+{% block content %}
+<h1>Welcome to My Website</h1>
+<p>This is the home page.</p>
+{% endblock %}
