--- a/pages/templates/pages/contact.html
+++ b/pages/templates/pages/contact.html
@@ -1,1 +1,7 @@
-<h1>Contact Us</h1>
+{% extends "base.html" %}
+
+{% block title %}Home{% endblock %}
+
+{% block content %}
+<h1>Contact us</h1>
+{% endblock %}
