--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -1,6 +1,12 @@
+{% extends "base.html" %}
+
+{% block title %}Blog{% endblock %}
+
 <h1>Blog</h1>
 {% for post in posts %}
     <h2><a href="{% url 'blog_detail' post.id %}">{{ post.title }}</a></h2>
     <p>{{ post.created_at }}</p>
     <p>{{ post.content|truncatewords:20 }}</p>
 {% endfor %}
+
+{% endblock %}
