--- a/booking/templates/booking/booking.html
+++ b/booking/templates/booking/booking.html
@@ -1,6 +1,12 @@
+{% extends "base.html" %}
+
+{% block title %}Booking{% endblock %}
+
 <h1>Booking</h1>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Book Now</button>
 </form>
+
+{% endblock %}
