--- a/pages/templates/pages/services.html
+++ b/pages/templates/pages/services.html
@@ -1,1 +1,8 @@
+{% extends "base.html" %}
+
+{% block title %}Home{% endblock %}
+
+{% block content %}
 <h1>Services</h1>
+<p>My Services</p>
+{% endblock %}
