--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -2,6 +2,7 @@
 
 {% block title %}Blog{% endblock %}
 
+{% block content %}
 <h1>{{ post.title }}</h1>
 <p>{{ post.created_at }}</p>
 <p>{{ post.content }}</p>
