--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -2,6 +2,7 @@
 
 {% block title %}Blog{% endblock %}
 
+{% block content %}
 <h1>Blog</h1>
 {% for post in posts %}
     <h2><a href="{% url 'blog_detail' post.id %}">{{ post.title }}</a></h2>
