--- a/pages/templates/pages/home.html
+++ b/pages/templates/pages/home.html
@@ -1,8 +1,13 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<h1>Welcome to My Website</h1>
-<p>This is the home page.</p>
+<div class="jumbotron">
+    <h1 class="display-4">Welcome to Seeheimat</h1>
+    <p class="lead">We offer the best services to make your experience memorable.</p>
+    <hr class="my-4">
+    <p>Explore our services and get in touch with us for more details.</p>
+    <a class="btn btn-primary btn-lg" href="{% url 'services' %}" role="button">Learn more</a>
+</div>
 {% endblock %}
