--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -26,7 +26,7 @@ nav ul li a {
 }
 
 footer {
-    background-color: #333;
+    background-color: #390c0c;
     color: white;
     text-align: center;
     padding: 1em;
