changed book serice url

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'booking' %}">Booking</a>
+                        <a class="nav-link" href="{% url 'book_service' %}">Booking</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'blog_list' %}">Blog</a>
