--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -27,7 +27,7 @@ nav ul li a {
 
 footer {
     background-color: #710707;
-    color: white;
+    color: rgb(255, 0, 0);
     text-align: center;
     padding: 1em;
     position: fixed;
