--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -27,7 +27,7 @@ nav ul li a {
 
 footer {
     background-color: #390c0c;
-    color: white;
+    color: rgb(72, 255, 0);
     text-align: center;
     padding: 1em;
     position: fixed;
