--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -9,18 +9,18 @@ body {
     padding: 0;
 }
 
-a {
+li {
     color: #007bff;
     text-decoration: none;
 }
 
-a:hover {
+li:hover {
     color: #0056b3;
 }
 
 /* Header Styles */
 header {
-    background-color: #343a40;
+    background-color: #fff;
     padding: 1rem;
     display: flex;
     justify-content: space-between;
