changed footer color

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -85,7 +85,7 @@ header .navbar-brand {
 
 /* Footer Styles */
 footer {
-    background-color: #343a40;
+    background-color: #292b2c;
     color: #ffffff;
     text-align: center;
     padding: 1rem 0;
