changed from light to dark

--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
         {% block content %}{% endblock %}
     </main>
     
-    <footer class="bg-light py-4 mt-4">
+    <footer class="bg-dark py-4 mt-4">
         <div class="container">
             <p class="text-center">&copy; 2024 Seeheimat</p>
         </div>
