--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -20,7 +20,6 @@ li:hover {
 
 /* Header Styles */
 header {
-    background-color: #fff;
     padding: 1rem;
     display: flex;
     justify-content: space-between;
@@ -28,7 +27,6 @@ header {
 }
 
 header a {
-    color: #ffffff;
     font-size: 1.2rem;
     margin: 0 1rem;
 }
@@ -85,8 +83,7 @@ header .navbar-brand {
 
 /* Footer Styles */
 footer {
-    background-color: #292b2c;
-    color: #ffffff;
+    color: #292b2c;
     text-align: center;
     padding: 1rem 0;
     position: absolute;
