--- a/pages/templates/pages/services.html
+++ b/pages/templates/pages/services.html
@@ -8,7 +8,7 @@
     {% for service in services %}
     <div class="col-md-4">
         <div class="card mb-4 shadow-sm">
-            <img src="{{ service.image.url }}" class="card-img-top" alt="{{ service.name }}">
+            <!-- <img src="{{ service.image.url }}" class="card-img-top" alt="{{ service.name }}"> -->
             <div class="card-body">
                 <h5 class="card-title">{{ service.name }}</h5>
                 <p class="card-text">{{ service.description }}</p>
