--- a/booking/templates/booking/book_service.html
+++ b/booking/templates/booking/book_service.html
@@ -3,10 +3,31 @@
 {% block title %}Book a Service{% endblock %}
 
 {% block content %}
-<h1>Book a Service</h1>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Book</button>
-</form>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="card">
+                <div class="card-header bg-primary text-white">
+                    <h2 class="mb-0">Book a Service</h2>
+                </div>
+                <div class="card-body">
+                    <form method="post">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            {{ form.service.label_tag }}<br>
+                            {{ form.service|as_crispy_field }}
+                            <small class="form-text text-muted">Choose the service you want to book.</small>
+                        </div>
+                        <div class="form-group">
+                            {{ form.time.label_tag }}<br>
+                            {{ form.time|as_crispy_field }}
+                            <small class="form-text text-muted">Select the preferred time for your service.</small>
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-block">Book Now</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
