--- a/booking/templates/booking/book_service.html
+++ b/booking/templates/booking/book_service.html
@@ -22,7 +22,12 @@
                         </div>
                         <div class="form-group">
                             {{ form.time.label_tag }}<br>
-                            {{ form.time|as_crispy_field }}
+                            <div class="input-group date" id="datetimepicker1" data-target-input="nearest">
+                                {{ form.time|as_crispy_field }}
+                                <div class="input-group-append" data-target="#datetimepicker1" data-toggle="datetimepicker">
+                                    <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                                </div>
+                            </div>
                             <small class="form-text text-muted">Select the preferred time for your service.</small>
                         </div>
                         <button type="submit" class="btn btn-primary btn-block">Book Now</button>
@@ -32,4 +37,15 @@
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block scripts %}
+<script type="text/javascript">
+    $(function () {
+        $('#datetimepicker1').datetimepicker({
+            format: 'YYYY-MM-DD HH:mm:ss',
+            sideBySide: true
+        });
+    });
+</script>
 {% endblock %}
