changed calendar so it works

--- a/booking/templates/booking/book_service.html
+++ b/booking/templates/booking/book_service.html
@@ -15,18 +15,18 @@
                 <div class="card-body">
                     <form method="post">
                         {% csrf_token %}
-                        <div class="form-group">
+                        <div class="form-group mb-3">
                             {{ form.service.label_tag }}<br>
                             {{ form.service|as_crispy_field }}
                             <small class="form-text text-muted">Choose the service you want to book.</small>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group mb-3">
                             {{ form.time.label_tag }}<br>
-                            <div class="input-group date" id="datetimepicker1" data-target-input="nearest">
+                            <div class="input-group" id="datetimepicker1" data-td-target-input="nearest" data-td-target-toggle="nearest">
                                 {{ form.time|as_crispy_field }}
-                                <div class="input-group-append" data-target="#datetimepicker1" data-toggle="datetimepicker">
-                                    <div class="input-group-text"><i class="fa fa-calendar"></i></div>
-                                </div>
+                                <span class="input-group-text" data-td-target="#datetimepicker1" data-td-toggle="datetimepicker">
+                                    <i class="fa fa-calendar"></i>
+                                </span>
                             </div>
                             <small class="form-text text-muted">Select the preferred time for your service.</small>
                         </div>
@@ -42,9 +42,20 @@
 {% block scripts %}
 <script type="text/javascript">
     $(function () {
-        $('#datetimepicker1').datetimepicker({
-            format: 'YYYY-MM-DD HH:mm:ss',
-            sideBySide: true
+        const picker = new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'), {
+            display: {
+                components: {
+                    calendar: true,
+                    date: true,
+                    month: true,
+                    year: true,
+                    decades: true,
+                    clock: true,
+                    hours: true,
+                    minutes: true,
+                    seconds: false
+                }
+            }
         });
     });
 </script>
