--- a/templates/base.html
+++ b/templates/base.html
@@ -78,5 +78,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/moment@2.29.1/min/moment.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tempusdominus-bootstrap-5@6.2.7/build/js/tempusdominus-bootstrap-5.min.js"></script>
+
+    {% block extras %}
+    {% endblock %}
+
 </body>
 </html>
