--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,108 +1,161 @@
-/* styles.css */
-
-/* General Styles */
 body {
-    background-color: #f4f7f6;
-    font-family: 'Roboto', sans-serif;
-    color: #333;
-    margin: 0;
-    padding: 0;
+    background-color: #F9FAFC;
 }
 
-li {
-    color: #007bff;
+.brand {
+    font-family: Lato, sans-serif;
+    font-size: 1.4rem;
+    font-weight: 700;
+    color: #4A4A4F;
+}
+
+.red-o {
+    color: #E84610;
+}
+
+.thin {
+    font-weight: 300;
+}
+
+.light-bg {
+    background-color: #fff;
+}
+
+.dark-bg {
+    background-color: #445261;
+}
+
+.main-bg {
+    background-color: #F9FAFC;
+}
+
+.card {
+    border: none;
+    background-color: transparent;
+}
+
+.image-container {
+    position: relative;
+}
+
+.image-flash {
+    position: absolute;
+    bottom: 5%;
+    min-width: 30%;
+    left: -2px;
+    background-color: #188181;
+}
+
+.scale {
+    width: 100%;
+    height: auto;
+}
+
+.author {
+    color: white;
+    margin: 4px;
+    text-transform: uppercase;
+}
+
+.masthead {
+    margin-top: 10px;
+    overflow: hidden;
+    position: relative;
+    display: inline-block;
+    height: 33vh;
+    width: 100%;
+}
+
+.masthead-text {
+    background-color: #445261;
+    color: white;
+    position: relative;
+}
+
+.masthead-image {
+    position: relative;
+    overflow: hidden;
+}
+
+.masthead-image:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 90%;
+    height: 100%;
+    width: 150%;
+    background: #445261;
+    -webkit-transform: skew(15deg);
+    -moz-transform: skew(15deg);
+    transform: skew(15deg);
+    z-index: 100;
+}
+
+.post-link {
+    text-decoration: none;
+    color: #445261;
+}
+
+.post-link:hover,
+.page-link {
+    color: #E84610;
+}
+
+.post-title {
+    margin-top: 10%;
+    margin-left: 5%;
+}
+
+.post-subtitle {
+    margin-left: 5%;
+    color: lightgray;
+}
+
+.btn-signup,
+.btn-edit {
+    background-color: #188181;
+    color: #fff;
+}
+
+.btn-signup:hover,
+.btn-signup:active {
+    background-color: #fff;
+    color: #23BBBB;
+}
+
+.link {
+    color: #23BBBB;
     text-decoration: none;
 }
 
-li:hover {
-    color: #0056b3;
+.link:hover,
+.link:active {
+    color: #445261;
+    text-decoration: underline;
 }
 
-/* Header Styles */
-header {
-    padding: 1rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.btn-like {
+    color: #E84610;
+    border: none;
+    background: transparent;
 }
 
-header a {
-    font-size: 1.2rem;
-    margin: 0 1rem;
+.btn-delete {
+    color: #fff;
+    background: #E84610;
 }
 
-header .navbar-brand {
-    font-size: 1.5rem;
-    font-weight: bold;
+.btn-like:hover,
+.btn-like:active {
+    color: #E84610;
+    background: transparent;
+    border: none;
 }
 
-/* Container Styles */
-.container {
-    margin-top: 2rem;
-    max-width: 1200px;
-    padding: 0 1rem;
+.faded {
+    color: rgb(172, 175, 175);
 }
 
-/* Card Styles */
-.card {
-    margin-bottom: 2rem;
-    border: 1px solid #ddd;
-    border-radius: 0.5rem;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.card-header {
-    background-color: #007bff;
-    color: #ffffff;
-    padding: 1rem;
-    border-bottom: 1px solid #ddd;
-    border-top-left-radius: 0.5rem;
-    border-top-right-radius: 0.5rem;
-}
-
-.card-body {
-    padding: 1.5rem;
-}
-
-/* Form Styles */
-.form-control {
-    margin-bottom: 1rem;
-    border-radius: 0.25rem;
-}
-
-.btn-primary {
-    background-color: #007bff;
-    border-color: #007bff;
-    transition: background-color 0.3s ease, border-color 0.3s ease;
-}
-
-.btn-primary:hover {
-    background-color: #0056b3;
-    border-color: #0056b3;
-}
-
-/* Footer Styles */
-/* footer {
-    color: #292b2c;
-    text-align: center;
-    padding: 1rem 0;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-} */
-
-/* Responsive Styles */
-@media (max-width: 768px) {
-    header {
-        flex-direction: column;
-    }
-
-    .container {
-        margin-top: 1rem;
-    }
-
-    .card-header,
-    .card-body {
-        padding: 1rem;
-    }
+.approval {
+    color: rgb(222, 146, 168);
 }
