--- a/booking/templates/booking/book_service.html
+++ b/booking/templates/booking/book_service.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
-
+{% load static %}
 {% load crispy_forms_tags %}
+
 
 {% block title %}Book a Service{% endblock %}
 
@@ -34,6 +35,7 @@
         </div>
     </div>
 </div>
+{% endblock content %}
 
 {% block extra_js %}
 <script src="{% static 'js/booking.js' %}"></script>
