--- a/booking/templates/booking/book_confirmation.html
+++ b/booking/templates/booking/book_confirmation.html
@@ -4,5 +4,8 @@
 
 {% block content %}
 <h1>Booking Confirmation</h1>
-<p>Thank you for booking {{ booking.service.name }} on {{ booking.date }} at {{ booking.time }}.</p>
+<p>Thank you for booking!</p>
+<p>Service: {{ booking.service.name }}</p>
+<p>Date: {{ booking.date }}</p>
+<p>Time: {{ booking.time_slot }}</p>
 {% endblock %}
