--- a/booking/templates/booking/book_service.html
+++ b/booking/templates/booking/book_service.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
 {% load crispy_forms_tags %}
-
 {% block title %}Book a Service{% endblock %}
 
 {% block content %}
@@ -17,7 +16,7 @@
                 <button type="button" class="btn btn-slot {% if slot in booked_slots %}btn-secondary{% else %}btn-primary{% endif %}"
                         {% if slot in booked_slots %}disabled{% endif %}"
                         data-time-slot="{{ slot }}">
-                    {{ slot|time:"H:i" }}
+                    {{ slot }}
                 </button>
             {% endfor %}
         </div>
@@ -26,7 +25,7 @@
     <input type="hidden" name="time_slot" id="selected-time-slot">
     <button type="submit" class="btn btn-primary">Book</button>
 </form>
-{% endblock content %}
+{% endblock %}
 
 {% block extra_js %}
 <script src="{% static 'js/booking.js' %}"></script>
