--- a/booking/templates/booking/book_confirmation.html
+++ b/booking/templates/booking/book_confirmation.html
@@ -1,11 +1,31 @@
 {% extends "base.html" %}
 
-{% block title %}Booking Confirmation{% endblock %}
-
 {% block content %}
-<h1>Booking Confirmation</h1>
-<p>Thank you for booking!</p>
-<p>Service: {{ booking.service.name }}</p>
-<p>Date: {{ booking.date }}</p>
-<p>Time: {{ booking.time_slot }}</p>
-{% endblock %}
+
+<div class="container-fluid mt-5">
+    <div class="row d-flex justify-content-center">
+        <div class="col-sm-8 mt-5 mb-5">
+            <h1 class="text-center">Booking Successful</h1><hr>
+        </div>
+    </div>
+<section>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-4 mt-5 mb-5 p-5 bg-darker rounded">
+                <div class="card-body">
+                    <div class="row">
+                        
+                        <h2>Awaiting Confirmation</h2><br>
+                        <hr>
+                        <p>Your booking will be confirmed soon, <a href="{% url 'booking_list' %}" class="booking-success-button">click</a></p><br>
+                        <p>Return home, <a href="{% url 'home' %}" class="booking-success-button">click</a><p><br>
+                        <p>We look forward to seeing you!</p>
+                         
+                    </div>            
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+{%endblock%}
