--- a/pages/templates/pages/home.html
+++ b/pages/templates/pages/home.html
@@ -5,53 +5,90 @@
 
 {% block content %}
 
-<div class="d-block w-100 rounded" style="background-image: url({% static 'images/Kra_185_small.webp' %}); height: 75vh;">
-    <div class="jumbotron p-5 mt-5">
+<div class="d-block w-100 rounded" style="background-image: url({% static 'images/Kra_185_small.webp' %}); height: fit-content">
+    <div class="jumbotron p-4 text-white" style="background-color: transparent;">
         <h1 class="display-4">Welcome to Seeheimat</h1>
         <p class="lead">We offer the best services to make your experience memorable.</p>
-        <hr class="my-4">
+        <hr class="my-4 bg-light">
         <p>Explore our services and get in touch with us for more details.</p>
-        <a class="btn btn-primary btn-lg" href="{% url 'select_date' %}" role="button">Book now</a>
+        <a class="btn btn-primary btn-lg" href="{% url 'booking_list' %}" role="button">Book now</a>
+    </div>
+
+    <div class="ticker-wrap mt-5">
+        <div class="ticker">
+            <div class="ticker__item">KAFFEE</div>
+            <div class="ticker__item">≈</div>
+            <div class="ticker__item">KUCHEN</div>
+            <div class="ticker__item">≈</div>
+            <div class="ticker__item">SEE</div>
+            <div class="ticker__item">≈</div>
+            <div class="ticker__item">ZIRBENKISSEN</div>
+            <div class="ticker__item">≈</div>
+            <div class="ticker__item">EIS</div>
+            <div class="ticker__item">≈</div>
+            <div class="ticker__item">BRETTLJAUSE</div>
+            <div class="ticker__item">≈</div>
+            <div class="ticker__item">WELLNESS</div>
+            <div class="ticker__item">≈</div>
+            <div class="ticker__item">MASSAGE</div>
+            <div class="ticker__item">≈</div>
+            <div class="ticker__item">SONNENLIEGEN</div>
+            <div class="ticker__item">≈</div>
+            <div class="ticker__item">NATURPRODUKTE</div>
+            <div class="ticker__item">≈</div>
+            <div class="ticker__item">SOUVENIRS</div>
+            <div class="ticker__item">≈</div>
+        </div>
     </div>
 </div>
 
-<div class="ticker-wrap">
-    <div class="ticker">
-        <div class="ticker__item">KAFFEE</div>
-        <div class="ticker__item">≈</div>
-        <div class="ticker__item">KUCHEN</div>
-        <div class="ticker__item">≈</div>
-        <div class="ticker__item">SEE</div>
-        <div class="ticker__item">≈</div>
-        <div class="ticker__item">ZIRBENKISSEN</div>
-        <div class="ticker__item">≈</div>
-        <div class="ticker__item">EIS</div>
-        <div class="ticker__item">≈</div>
-        <div class="ticker__item">BRETTLJAUSE</div>
-        <div class="ticker__item">≈</div>
-        <div class="ticker__item">WELLNESS</div>
-        <div class="ticker__item">≈</div>
-        <div class="ticker__item">MASSAGE</div>
-        <div class="ticker__item">≈</div>
-        <div class="ticker__item">SONNENLIEGEN</div>
-        <div class="ticker__item">≈</div>
-        <div class="ticker__item">NATURPRODUKTE</div>
-        <div class="ticker__item">≈</div>
-        <div class="ticker__item">SOUVENIRS</div>
-        <div class="ticker__item">≈</div>
+<div class="row">
+    <div class="card mt-5 mb-5 mx-auto">
+        <h2>Opening Times</h2>
+        <ul>
+            <li>Sommer: Monday - Sunday | 10:00 - 18:00 </li>
+            <li>Winter: Monday - Sunday | 11:00 - 17:00 </li>
+        </ul>
     </div>
-</div>
+    </div>
 
+    <div class="col-md-8">
+        <div class="row">
+            <div class="col-md-6">
+                <div id="achensee-image">
+                    <a href="https://maps.app.goo.gl/CJFqh4fPjpFdzc8i7" target="_blank">
+                        <img id="location-image" src="{% static 'images/achensee_location.webp' %}" alt="Kräuterhüttl Achensee Location">
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-6">
+                
+                <!-- openstreetmap -->
+                <div id="map"></div>
 
-<div class="container mt-5">
-    <h2>Our team</h2>
+                <!-- Javascript for map -->
+                <script>
+                    var mymap = L.map('map').setView([47.4398, 11.7137], 13);
+
+                    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
+                        { subdomains: ['a', 'b', 'c'] })
+                        .addTo(mymap);
+
+                    var customMarker = L.marker([47.4398, 11.7137]).addTo(mymap)
+                        .bindPopup('Your Custom Marker');
+                </script>
+
+            </div>
+        </div>
+    </div>
+
+    <h2 class="mt-5">Our team</h2>
     <div class="row">
         <div class="col-md-4">
             <div class="card mb-4 shadow-sm">
                 <img src="{% static 'images/default.png' %}" class="card-img-top" alt="Placeholder">
                 <div class="card-body">
-                    <h5 class="card-title
-                    ">John Doe</h5>
+                    <h5 class="card-title">John Doe</h5>
                     <p class="card-text">Lorem Ipsum</p>
                 </div>
             </div>
@@ -60,16 +97,12 @@
             <div class="card mb-4 shadow-sm">
                 <img src="{% static 'images/default.png' %}" class="card-img-top" alt="Placeholder">
                 <div class="card-body">
-                    <h5 class="card-title
-                    ">Jane Doe</h5>
+                    <h5 class="card-title">Jane Doe</h5>
                     <p class="card-text">Lorem Ipsum</p>
                 </div>
             </div>
         </div>
     </div>
-</div>
+    </div>
 
-
-
-
-{% endblock %}
+    {% endblock %}
