--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,4 +1,3 @@
-
 a {
     color: #3f3f3f;
     text-decoration: none;
@@ -14,6 +13,11 @@ body {
     background-color: #e0e0e0;
     font-family: 'Montserrat', sans-serif;
     color: #3f3f3f;
+}
+
+#nav-logo{
+    max-height: 2vh;
+    
 }
 
 .ticker-wrap {
