--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -1,4 +1,3 @@
-
 a {
     color: #3f3f3f;
     text-decoration: none;
@@ -14,6 +13,10 @@ body {
     background-color: #e0e0e0;
     font-family: 'Montserrat', sans-serif;
     color: #3f3f3f;
+}
+
+#nav-logo{
+    max-height: 2vh;
 }
 
 .ticker-wrap {
@@ -120,18 +123,3 @@ body {
     color: green
 }
 
-.map-responsive {
-
-    padding-bottom: 56.25%;
-    position: relative;
-    height: 0;
-    overflow: hidden;
-}
-
-.map-responsive iframe {
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    position: absolute;
-}
